# News_System

./: .gitignore  README.md  main.py  pyproject.toml
CRUD/: NewsCRUD.py  UsersCRUD.py
Config/: AliyunOssConfig.py  DataBaseConfig.py  LogConfig.py  settings.py
Dependency/: JWTAuth.py  register_exception.py
Exception/: BusinessException.py  ResponseCode.py  __init__.py
MIddleware/: PerformanceMiddleware.py  ResponseMiddleware.py  __init__.py
News_System/: pyvenv.cfg
Page/: News.html
Repo/: NewsCacheRepo.py  NewsRepo.py  UserFavCacheRepo.py  UserFavRepo.py  UserFavoriteRepo.py  UserHistCacheRepo.py  UserHistRepo.py  UserHistoryRepo.py  UserRepo.py  __init__.py
Route/: UnifiedRoute.py
Router/: AuthRouter.py  CommonRouter.py  NewsRouter.py  UserFavRouter.py  UserFavoriteRouter.py  UserHistRouter.py  UserHistoryRouter.py  UserRouter.py  UsersRouter.py
Schemas/: CommonSchema.py  NewsSchema.py  Response.py  UserFavSchema.py  UserFavoriteSchema.py  UserHistSchema.py  UserHistorySchema.py  UserSchema.py  Users.py  UsersSchema.py
Service/: AuthService.py  CommonService.py  NewsService.py  UserFavService.py  UserHistService.py  UserService.py  __init__.py
SpiderMode/: news_data_20260526.json  spidernews.py
Test/: fileTest.py  insert_news.py  newsMock.py
Utils/: AuthUtil.py  CommonUtil.py  EmailUtil.py  FileUtil.py  HashUtil.py  JWTUtil.py  LogUtil.py  RedisUtil.py  ResponseUtil.py  SchemaUtil.py  SecurityUtil.py  ServiceDecorator.py  TransactionMixin.py  response.py
frontend/: detail.html  favorites.html  history.html  index.html  search.html
(+21 files in other folders)
