[project]
name = "NewsSystem"
version = "0.1.0"
description = "Seven News - 全栈资讯平台"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "fastapi-utils>=0.8.0",
    "pydantic-settings>=2.14.0",
    "pymysql>=1.1.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.46.0",
    "aiomysql>=0.2.0",
    "argon2-cffi>=23.0.0",
    "hashids>=1.3.0",
    "loguru>=0.7.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.6",
    "aiosmtplib>=3.0.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
